[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/GFX/CardDelivery/TraficLights.png" type="Texture" id=1]
[ext_resource path="res://Scenes/CardDelivery/Decorations.gd" type="Script" id=2]
[ext_resource path="res://Resources/GFX/CardDelivery/Road.jpg" type="Texture" id=3]
[ext_resource path="res://Scenes/CardDelivery/Trotuar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/CardDelivery/Danger.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "RoadAppera"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1915 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "RoadBehind"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1900 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "RoadAppera"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1915 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "RoadBehind"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1900 ) ]
}

[node name="Decorations" type="Control" groups=["Decorations"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1915.0
margin_bottom = -1915.0
rect_pivot_offset = Vector2( 540, 960 )
mouse_filter = 2
script = ExtResource( 2 )

[node name="Road" type="Sprite" parent="."]
position = Vector2( 540.023, 956.009 )
texture = ExtResource( 3 )

[node name="Trotuar" parent="." instance=ExtResource( 4 )]
position = Vector2( 75.0227, 956.018 )

[node name="Trotuar2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1004.42, 956.023 )
rotation = -3.14159

[node name="TrafficLights" type="Sprite" parent="."]
position = Vector2( 908.065, 1490.1 )
texture = ExtResource( 1 )

[node name="DangerLeft" type="Position2D" parent="."]
position = Vector2( 265.659, 405.065 )

[node name="DangerMiddle" type="Position2D" parent="."]
position = Vector2( 556.092, 405.065 )

[node name="DangerRight" type="Position2D" parent="."]
position = Vector2( 819.798, 405.065 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RoadAppera = SubResource( 1 )
anims/RoadBehind = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/RoadAppera = SubResource( 3 )
anims/RoadBehind = SubResource( 4 )

[node name="DangerLeftRoad" parent="." instance=ExtResource( 5 )]
position = Vector2( 263.242, 376.75 )

[node name="DangerMiddleRoad" parent="." instance=ExtResource( 5 )]
position = Vector2( 553.05, 376.75 )

[node name="DangerRightRoad" parent="." instance=ExtResource( 5 )]
position = Vector2( 821.122, 376.75 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
